CSS: Fix documentation margins on smaller phones

--- a/htdocs/css/responsive.css
+++ b/htdocs/css/responsive.css
@@ -1596,8 +1596,8 @@
 	}
 	
 	.doc-body, .config_editor {
-		margin-left: 20px;
-		margin-right: 20px;
+		margin-left: 10px;
+		margin-right: 10px;
 	}
 	
 	body.magic {
